# lidar-inertial-odom

./: README.md
ndt_omp/: CMakeLists.txt
ndt_omp/apps/: align.cpp
ndt_omp/include/: se3_local_parameterization.hpp
ndt_omp/include/pclomp/: ndt_lm.h  ndt_lm_impl.hpp
ndt_omp/include/residuals/: ndt_residual.h
ndt_omp/src/: se3_local_parameterization.cpp
ndt_omp/src/pclomp/: ndt_lm.cpp
ndt_omp/src/residuals/: ndt_residual.cpp
